--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 	<!--底部导航-->
 	<div class="menu">
 		<div class="menu-area">
-			<img class="menu-img" src="img/icon_zy01.png"/>						
+			<img class="menu-img" src="img/icon_zy01s.png"/>						
 			<div class="menu-title">资源</div>
 		</div>
 		<div class="menu-area">
