四个主页样式完成
四个主页样式完成

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 <head>
 	<meta charset="UTF-8">
 	<!--<link rel="stylesheet" type="text/css" media="screen" href="css/all.css" />-->
+	<link rel="stylesheet" type="text/css" media="screen" href="css/common.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
 	<script type="text/javascript" src="js/kitLite.js"></script>
 	<script type="text/javascript" src="js/jquery1.7.2.js"></script>
-	<title></title>
+	<link rel="shortcut icon" href="img/favicon.ico" />
+	<title>忆云竹</title>
 	<script type="text/javascript">
 		adaptForMobile(800);
 	</script>
@@ -152,22 +154,30 @@
 	</div>
 	<!--底部导航-->
 	<div class="menu">
-		<div class="menu-area">
-			<img class="menu-img" src="img/icon_zy01s.png"/>						
-			<div class="menu-title">资源</div>
-		</div>
-		<div class="menu-area">
-			<img class="menu-img" src="img/icon_zy02.png"/>			
-			<div class="menu-title">社区</div>
-		</div>
-		<div class="menu-area">
-			<img class="menu-img" src="img/icon_zy03.png"/>				
-			<div class="menu-title">发现</div>
-		</div>
-		<div class="menu-area">
-			<img class="menu-img" src="img/icon_zy04.png"/>			
-			<div class="menu-title">空间</div>
-		</div>
+		<a href="index.html">
+			<div class="menu-area">
+				<img class="menu-img" src="img/icon_zy01s.png"/>						
+				<div class="menu-title">资源</div>
+			</div>
+		</a>
+		<a href="community.html">
+			<div class="menu-area">
+				<img class="menu-img" src="img/icon_zy02.png"/>			
+				<div class="menu-title">社区</div>
+			</div>
+		</a>
+		<a href="explore.html">
+			<div class="menu-area">
+				<img class="menu-img" src="img/icon_zy03.png"/>				
+				<div class="menu-title">发现</div>
+			</div>
+		</a>
+		<a href="space.html">
+			<div class="menu-area">
+				<img class="menu-img" src="img/icon_zy04.png"/>			
+				<div class="menu-title">空间</div>
+			</div>
+		</a>
 	</div>
 
 </body>
