--- a/model.html
+++ b/model.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="css/all.css" />
 	<script type="text/javascript" src="js/kitLite.js"></script>
 	<script type="text/javascript" src="js/jquery1.7.2.js"></script>
+	<link rel="shortcut icon" href="img/favicon.ico" />
 	<title></title>
 	<script type="text/javascript">
 		adaptForMobile(800);
