基本完成样式
完成基本界面效果

--- a/explore.html
+++ b/explore.html
@@ -49,7 +49,13 @@
 			<span class="explore-item-title">闪传</span>
 			<div class="explore-item-next"></div>
 		</div>
-		
+		<a href="music/index.html">
+			<div class="explore-item">
+				<img src="img/icon_bk01.png" />
+				<span class="explore-item-title">音乐</span>
+				<div class="explore-item-next"></div>
+			</div>
+		</a>
 	</div>
 
 
