--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 							<span class="games-category-size">91.68MB</span>
 						</div>
 					</div>
-					<div class="games-down">下载</div>
+					<div class="games-down">
+						<a href="down/游戏下载.zip">下载</a>
+					</div>
 				</div>			
 			</div>
 			
@@ -75,7 +77,9 @@
 							<span class="games-category-size">91.68MB</span>
 						</div>
 					</div>
-					<div class="games-down">下载</div>
+					<div class="games-down">
+						<a href="down/游戏下载.zip">下载</a>
+					</div>
 				</div>			
 			</div>
 			
@@ -89,7 +93,9 @@
 							<span class="games-category-size">91.68MB</span>
 						</div>
 					</div>
-					<div class="games-down">下载</div>
+					<div class="games-down">
+						<a href="down/游戏下载.zip">下载</a>
+					</div>
 				</div>			
 			</div>
 			
@@ -103,7 +109,9 @@
 							<span class="games-category-size">91.68MB</span>
 						</div>
 					</div>
-					<div class="games-down">下载</div>
+					<div class="games-down">
+						<a href="down/游戏下载.zip">下载</a>
+					</div>
 				</div>			
 			</div>
 			
@@ -117,7 +125,9 @@
 							<span class="games-category-size">91.68MB</span>
 						</div>
 					</div>
-					<div class="games-down">下载</div>
+					<div class="games-down">
+						<a href="down/游戏下载.zip">下载</a>
+					</div>
 				</div>			
 			</div>
 			
@@ -131,7 +141,9 @@
 							<span class="games-category-size">91.68MB</span>
 						</div>
 					</div>
-					<div class="games-down">下载</div>
+					<div class="games-down">
+						<a href="down/游戏下载.zip">下载</a>
+					</div>
 				</div>			
 			</div>
 			
@@ -145,7 +157,9 @@
 							<span class="games-category-size">91.68MB</span>
 						</div>
 					</div>
-					<div class="games-down">下载</div>
+					<div class="games-down">
+						<a href="down/游戏下载.zip">下载</a>
+					</div>
 				</div>			
 			</div>
 			
